--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -20,9 +20,28 @@
                     <!--<li class="nav-item" th:classappend="${currentPage == 'HOME'} ? 'active'">
                         <a class="nav-link" href="#" th:href="@{/}">Home <span class="sr-only">(current)</span></a>
                     </li>-->
-                    <li class="nav-item" th:each="menu : ${menuList}">
+                    
+                    <th:block th:each="menu : ${menuList}">
+                        <li class="nav-item" th:if="${menu.key.menuRole} == 'ROLE_USER'">
+                            <a class="nav-link" href="#" th:href="@{${menu.key.menuUrl}}" th:text="${menu.key.menuName}">About</a>
+                            <ul th:if="${menu.value}" class="d-none">
+                                <li th:each="child : ${menu.value}">
+                                    <a href="#" th:href="@{${child.menuUrl}}" th:text="${child.menuName}">About</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item" th:unless="${menu.key.menuRole} == 'ROLE_USER'" sec:authorize="hasRole('ROLE_ADMIN')">
+                            <a class="nav-link" href="#" th:href="@{${menu.key.menuUrl}}" th:text="${menu.key.menuName}">About</a>
+                            <ul th:if="${menu.value}" class="d-none">
+                                <li th:each="child : ${menu.value}">
+                                    <a class="nav-link" href="#" th:href="@{${child.menuUrl}}" th:text="${child.menuName}">About</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </th:block>
+                    <!-- <li class="nav-item" th:each="menu : ${menuList}">
                         <a class="nav-link" href="#" th:href="@{${menu.menuUrl}}" th:text="${menu.menuName}">About</a>
-                    </li>
+                    </li> -->
                     <!--<li class="nav-item" th:classappend="${currentPage == 'ABOUT'} ? 'active'">
                         <a class="nav-link" href="#" th:href="@{/about}">About</a>
                     </li>
