--- a/src/main/resources/templates/admin/menu.html
+++ b/src/main/resources/templates/admin/menu.html
@@ -67,8 +67,8 @@
                             <input type="text" class="form-control" id="sortNo" v-model="params.sortOrderNo">
                         </div>
                         <div class="form-group col-md-3">
-                            <label for="sortNo">Menu Icon</label>
-                            <input type="text" class="form-control" id="sortNo" v-model="params.menuIcon">
+                            <label for="menuIcon">Menu Icon</label>
+                            <input type="text" class="form-control" id="menuIcon" v-model="params.menuIcon">
                         </div>
                         <div class="form-group col-md-3">
                             <label for="useFlag">Use Flag</label>
