--- a/src/main/resources/templates/conference/confList.html
+++ b/src/main/resources/templates/conference/confList.html
@@ -6,7 +6,7 @@
 <head>
     <title>학술대회</title>
 </head>
-<body th:with="currentPage = 'CONF'">
+<body th:with="currentPage = 'CONFERENCE'">
 <main class="container" layout:fragment="content">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
