--- a/src/main/resources/templates/fragments/adminNav.html
+++ b/src/main/resources/templates/fragments/adminNav.html
@@ -11,7 +11,15 @@
     <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse" layout:fragment="adminNav">
         <div class="sidebar-sticky">
             <ul class="nav flex-column">
-                <li class="nav-item">
+                <li class="nav-item" th:each="menu : ${subMenuList}">
+                    <a class="nav-link" th:href="@{${menu.menuUrl}}">
+                        <th:block th:if="${menu.menuIcon}">
+                            <i class="fas" th:classappend="${menu.menuIcon}"></i>
+                        </th:block>
+                        <th:block th:text="${menu.menuName}"></th:block>
+                    </a>
+                </li>
+                <!--/*<li class="nav-item">
                     <a class="nav-link active" th:href="@{/admin/menu}">
                         <i class="fas fa-bars"></i>
                         메뉴관리 <span class="sr-only">(current)</span>
@@ -29,7 +37,7 @@
                         게시판관리
                     </a>
                 </li>
-                <!--<li class="nav-item">
+                &lt;!&ndash;<li class="nav-item">
                     <a class="nav-link" href="#">
                         <span data-feather="shopping-cart"></span>
                         Products
@@ -52,7 +60,7 @@
                         <span data-feather="layers"></span>
                         Integrations
                     </a>
-                </li>-->
+                </li>&ndash;&gt;
             </ul>
 
             <h6
@@ -86,7 +94,7 @@
                         <span data-feather="file-text"></span>
                         Year-end sale
                     </a>
-                </li>
+                </li>*/-->
             </ul>
         </div>
     </nav>
